# coder

./: .gitmodules  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite-plugin-dts-import.ts  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  icon.png.sb-858498e6-fR3jq8  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmds.rs  lib.rs  log.rs  main.rs
src/assets/: code
src/components/: Button.tsx  Input.tsx
src/components/Log/: index.tsx
src/libs/: convert.ts  declare.d.ts  monaco.ts
src/pages/editor/: index.tsx  provider.tsx
src/pages/editor/components/: BookSourceFormGroup.tsx  CodeEditor.tsx  FileTabs.tsx  NavBar.tsx  SuggestionSidebar.tsx
src/pages/editor/components/Preview/: Actions.tsx  BookDetail.tsx  BookItem.tsx  Catalog.tsx  Chapter.tsx  Forms.tsx  MetaData.tsx  SearchBooks.tsx  index.tsx
src/providers/: drawer-provider.tsx  log-provider.tsx  modal-provider.tsx
