[package]
name = "reader-coder"
version = "0.1.0"
description = "A Tauri App"
authors = ["zsakvo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reader_coder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.6.0"
cocoa = "0.26.0"
book_core = { git = "https://github.com/Librune/core"}
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
once_cell = "1.21.3"
boa_engine = { version="0.20.0",features= ["annex-b"] }
boa_runtime = "0.20.0"
boa_gc = "0.20.0"

